[package]
name = "balance_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.21"
async-graphql-axum = "3.0.21"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
hyper = "0.14"
axum = { version = "0.4", features = ["headers"] }
